@@ -50,6 +50,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #7689: Allow pickling of dynamically created classes when their
+  metaclass is registered with copy_reg.  Patch by Nicolas M. Thiéry and
+  Craig Citro.
+
 - Issue #13058: ossaudiodev: fix a file descriptor leak on error. Patch by
   Thomas Jarosch.
 
